@@ -42,6 +42,8 @@ lintian (2.5.5) UNRELEASED; urgency=low
   * lib/Lintian/Lab.pm:
     + [NT] Added "is_temp" method to identify temp labs from static
       labs.
+  * lib/Lintian/Lab/Entry.pm:
+    + [NT] Properly strip whitespace when loading collection status.
   * lib/Lintian/Processable/Package.pm:
     + [NT] Use part of the file name as package name if the mandatory
       "Package" or "Source" fields are missing rather than choking.
